# practice

./: README.md
ALMA/: login-X.sh  login.sh  nn.pub  scriptForImaging.py
BDD/: 01-Hspec.hs  02-Fib.hs
Catch/: catch.md  main-1.cpp
DOI/: curl.hs  main.hs
JavaRock/: ButtonIF.java  Game.java  Top.java  button.vhd  compile_fpga.sh  test.qsf
SDL/: Makefile  main-00.cpp  main-01.cpp  main-02.cpp
SIMD/: a.out  test-1.cpp
accelerate/: Test.hs
ad/: benchmark.txt  opt-test.hs  plot.gnu  test-ad.cabal
ajhc/: errmsg  test.hs  trans.hs  trans2.hs
beamer/: beamer-09-pdf.tex  build.sh
bottle/: hello_world.py  post.py
call-cc/: bottom-encoding-monad.hs  builtin-writer.hs  cont-right.hs  doraemonad-2-1.hs  doraemonad-2.hs  doraemonad.hs  double-neg.hs  fairly-tale-RS.hs  fairly-tale-contT.hs  fairly-tale-monad.hs  fairly-tale-monadCont.hs  fairly-tale-writer.hs  fairly-tale.hs  fairly-tale.rkt  forever-runhaskell  get-void.hs  machines.hs  mnok.hs  observe-continuation-return.hs  pipe.hs  proof.hs  proof_in_haskell.hs  recall-cc.hs  rs2-2.hs  rs2.hs  rs3.hs  rs4.hs  rs5.hs
chainer/: README.md  animate.py  annealing.py  chainer-optimizer-test.py  chainer-regression.py  (+10 more)
crawler/: crawler.cabal
crawler/app/: Main.hs
set-cover/set-cover/: LICENSE  set-cover.cabal
set-cover/set-cover/_darcs/: tentative_hashed_inventory  tentative_pristine
set-cover/set-cover/_darcs/inventories/: 0000000703-54f8372973107dfd1b680184ded9fb8240cb1a594302d9d8d13b22857f3dfcc5  0000001388-5aca0530b312bcd7128610dc3ba3e43582ee2f99db9748917749e59c5a851928  0000001488-1af26b655b94cd707b73840cd3ba8ce0fe05c4bc902ad53fce947b4467324f5c  0000004489-f63fdd28eb1c513130bcadeede8099633eb3325a882c57a588e8d4cfb5aea12e  0000008113-123aa4c2c45fa6bfa134ca0b20b1d85b594eda67082ef6c289c9395f96e60c5d
set-cover/set-cover/_darcs/patches/: 0000000194-6cbe3aadaa652905706e9fadccc4c25f4bc43ce7e71d78433d8aacef0641813a  0000000198-2192f4438150eaee5b07abb85c63aaa2bcd2a623352efc53b6380c0f89a72152  0000000222-15fbc139e5c00a95c9b1684e1831095d38f4c0f3672ead16df3de7e27c74562e  0000000233-1685f88c9a35e7d20e9ef7d97af2c5864ba4f9ccf7742f101d22a1bea251b74d  0000000242-faf77988d050f3e1920a6a851146b3ef97751d7ac8baec51900e390a4a0ccac6  0000000243-4d4e989747cf81baf711ed6fc13178c1b4d10fc9cf84b5dac5f47c89e8954009  0000000258-55ab7e4d4c3ae51de168ed68b316db38f86216f0f2dde79513bf7cd85c9e9dc0  0000000260-9146cd23e0d0ad8f631ad62efb0e215194c7520490c0fe028ee7e84016bea128  0000000262-2f86b6e5db601ccc40c47dccdc7329389c0116a331b375017a4f15b3a79f56aa  0000000262-62f9ec76d1759f3402f8b1249df98ebc6d3faaf9acc0f72bf0a6a153bf473c06  0000000262-977e1993ebd3e49dfe41414b7dda1e49bed20ecad04c33b1724dc6a7ff4b3242  0000000282-aee4f1855541464fbd6731448ccd482a43606c4f352c6add06d22e0ada745c08  0000000302-a328453492848f3a7318a670b474ac6c26ac628cca78e218afe1397dc4294510  0000000339-4cbb962258ba048668493b386f1edefb113ef8ea782969ef18ffe5ecb40f1a37  0000000377-185529415edfe69d4eed3c6f3dabc7188b79e34025a6f6d0b10b3bcbc1bafed3  0000000399-02536a54824511284ef92ecc6d69f878414d4355e151d889be63e3aca1b800e8  0000000399-2812f9e47dafa6b055a9ee538f45327af6a313fbca8fda3c359c13ddb26191c9  0000000401-08519107771ffc247bba57da202e2ad34745924acb9604d99f2bc78c0863d98e  0000000414-fbda951d10459f2b23ff9dd47f87b284ecba9b89c69b74e772ec3ce6f3e558b0  0000000441-44782c66e6e8db55b609a989faab37b032200aeacbd317d7f16ad6b165f4b6ab  0000000465-8be0331ea0bfcb55fda07bd9515f87d4ad979d0e5ce6650cf9b08cdd013e5555  0000000491-7bf854a9155a0d06994f18c769fb28e02ed84ef26af36fb5461d7afd8b7c1cad  0000000495-5ee738de2a9486bef53c127345415f2d664ff49b0a32d33e7f9dda857a49480f  0000000517-fe445575169e4f395aba4294821b85c574b9fd8797787fe8fe3e6e75f7c172a8  0000000524-ac15b6a252f3d560eefa1f15c2e774e635699f355047235b089e3f8d947c0f06  0000000529-0fcfd53a6814e84225bf773a572009fdbbf9007c6f322b6c49d1fd96683a42c6  0000000616-d4851266cd3e01b068a0dd5a02574c3cc787887a828f285e0f3f7d3c227c4a7e  0000000624-a8d6d395a6d566765f4efa6cf79b101ebd321ef56eb165bef95732de8d2d9dd4  0000000682-c7c105936e63390df439eb57aa5fc79ebd8cd58aa36abdbb1968a65d3ec07cb5  0000000757-e292a65a11b744872d357666d89d3602fd1ecd8bcaafe4d0a557e9258f45283e  0000000798-266f9aef7a28c23b274a82b7d40ea9f5a05692ebdf56b88003f2faaf94829459  0000000905-8ac19df69f4ea61b2c69136328b3c7a43c9f7ab13f33fc13fc7986510a0c6c52  0000000908-a8233a7a75a481b167f706f3e547d0236a35b7c34ced4193110aaefc4bc25ea8  0000000923-75637279e45661b9926d86d891bba9ca2003329472d7a48e626ce55a4d4fad6e  0000000948-6a92fe89a153b57f29401acc189a4e657551b11a06f647f3a06ba59cd24d7b91  0000000966-f33c04df6785d15e4cc86cbc803ca68e42d67588387e92b293ce452e82b05d80  0000000973-8b1f29c1497d8b207d1a19d4b28e91c9da97402008e2f1837318f705f4f7cf86  0000000974-1819877cb7bd7cf233c09c4da9489c370fb82cec32468bcdcf86055affd81b62  0000000983-a3033697f006f9f684acda6941f4ae32a7532a3e03f52aee516ed8776592db6a  0000000997-4e98278c44115be12579efbc017ce695f8d84cad20a83455578ea636726e212d  (+45 more)
set-cover/set-cover/_darcs/prefs/: prefs  repos  sources
set-cover/set-cover/example/: Alphametics.hs  Baumeister.hs  Domino.hs  LCube.hs  Nonogram.hs  Queen8.hs  Soma.hs  Sudoku.hs  TetrisCube.hs  Utility.hs
set-cover/set-cover/src/Math/SetCover/: Bit.hs  BitMap.hs  BitSet.hs  Cuboid.hs  Exact.hs
(+2101 files in other folders)
