name:                crawler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/nushio3/crawler#readme
license:             BSD3
license-file:        LICENSE
author:              Takayuki Muranushi
maintainer:          muranushi@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable crawler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , curl
                     , either
                     , text
                     , tagsoup
                     , trifecta
                     , ansi-wl-pprint
                     , transformers

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/nushio3/crawler
